--- a/style.css
+++ b/style.css
@@ -18,6 +18,9 @@ body{
 .bg2{
     background-color: rgb(198, 228, 214);
 }
+.bg3{
+    margin-bottom: 80px;
+}
 .btn-primary{
     padding: 17px 34px;
     background-color: #006A50;
@@ -70,3 +73,26 @@ nav{
     font-weight: bold;
     margin: 16px 0 24px;
 }
+
+/* pillar styles */
+.pillars-title{
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom: 32px;
+}
+.pillars{
+    display: flex;
+    gap: 24px;
+    justify-content: space-evenly;
+}
+.pillar{
+    background-color: white;
+    border-radius: 16px;
+    padding: 24px;
+    box-shadow: 0 10px 15px 0px rgba(0, 0, 0, 0.3);
+}
+.pillar-title{
+    padding: 24px 0 12px;
+}
+
+/* vision styles */
