--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body{
     border-radius: 8px;
     color: white;
     cursor: pointer;
+    border: none;
 }
 .btn-primary:hover{
     background-color: #39a439;
@@ -83,7 +84,7 @@ nav{
 .pillars{
     display: flex;
     gap: 24px;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 .pillar{
     background-color: white;
@@ -96,3 +97,55 @@ nav{
 }
 
 /* vision styles */
+.vision-title{
+    font-size: 40px;
+    font-weight: bold;
+}
+.vision-info{
+    margin: 24px 0 32px;
+}
+.visions{
+    display: flex;
+    justify-content: space-between;
+    gap: 24px;
+}
+.vision{
+    border-radius: 16px;
+    padding: 32px;
+}
+.blue{
+    background-color: rgba(84, 144, 245, 0.2);
+}
+.holud{
+    background-color: rgb(247, 235, 207);
+}
+.vision-name{
+    margin: 24px 0 12px;
+}
+.vision button{
+    margin-top: 24px;
+    padding: 11px 20px;
+    border-radius: 8px;
+    font-weight: 600;
+    color: white;
+    cursor: pointer;
+    border: none;
+}
+.vbtn1{
+    background-color: #5490F5;
+}
+.vbtn2{
+    background-color: #09A15C;
+}
+.vbtn3{
+    background-color: #FFC239;
+}
+.vbtn1:hover{
+    background-color: #1753bb;
+}
+.vbtn2:hover{
+    background-color: #138150;
+}
+.vbtn3:hover{
+    background-color: #cf9b22;
+}
