--- a/style.css
+++ b/style.css
@@ -1,16 +1,19 @@
-.fira-sans-thin{
+.fira-sans-regular {
   font-family: "Fira Sans", serif;
-  font-weight: 100;
+  font-weight: 400;
   font-style: normal;
+  line-height: 24px;
 }
 *{
     margin: 0;
-    padding: 0;
 }
 
 /* shared style */
+.font{
+    color: #0e0e0ec5;
+}
 body{
-    background-color: #f5f5f5;
+    background-color: #ebebeb;
 }
 .bg1{
     margin: 0 160px;
@@ -73,6 +76,7 @@ nav{
     font-size: 56px;
     font-weight: bold;
     margin: 16px 0 24px;
+    line-height: normal;
 }
 
 /* pillar styles */
@@ -112,6 +116,7 @@ nav{
 .vision{
     border-radius: 16px;
     padding: 32px;
+    box-shadow: 0 10px 15px 2px rgba(0, 0, 0, 0.3);
 }
 .blue{
     background-color: rgba(84, 144, 245, 0.2);
@@ -149,3 +154,21 @@ nav{
 .vbtn3:hover{
     background-color: #cf9b22;
 }
+
+/* yunus styles */
+.yunus{
+    background-image: url(image/quote-bg.png);
+    background-repeat: no-repeat;
+    background-position: 24px 24px;
+    background-color: white;
+    padding: 48px 24px;
+    border-radius: 16px;
+}
+.yunus-description{
+    margin-bottom: 12px;
+    font-weight: 400px;
+}
+.yunus.name{
+    margin-bottom: 4px;
+}
+
