--- a/style.css
+++ b/style.css
@@ -35,6 +35,11 @@ body{
 .btn-primary:hover{
     background-color: #39a439;
 }
+.section-title{
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 24px;
+}
 
 /* nav styles */
 nav{
@@ -172,3 +177,48 @@ nav{
     margin-bottom: 4px;
 }
 
+/* opinon styles */
+.qs-opinion{
+    background-color: white;
+    border-radius: 16px;
+    padding: 32px;
+}
+.option{
+    text-align: center;
+}
+.question{
+    width: 83%;
+}
+table{
+    border-collapse: collapse;
+    width: 100%;
+}
+th,td{
+    border: 1px solid rgba(14,14,14,0.15);
+}
+th{
+    text-align: left;
+    border: none;
+    font-size: 20px;
+    font-weight: 600;
+}
+.tright{
+    padding: 24px 0;
+}
+.tleft{
+    padding: 24px;
+}
+td{
+    padding: 24px;
+}
+.dropdown{
+    padding: 12.5px ;
+    font-weight: 500;
+    border-radius: 4px;
+    text-align: center;
+    cursor: pointer;
+}
+.dropdown:hover{
+    background-color: #39a439;
+    color: white;
+}
