--- a/style.css
+++ b/style.css
@@ -228,5 +228,28 @@ td{
 
 /* news styles */
 .news{
-    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
+    padding: 56px 48px;
+    gap: 32px;
+    border-radius: 24px;
+    margin-bottom: 24px;
+}
+.news-img{
+    border-radius: 24px;
+}
+.news-title{
+    font-size: 32px;
+    font-weight: bold;
+    margin-bottom: 12px;
+}
+.somoy{
+    display: flex;
+    gap: 12px;
+    margin-bottom: 12px;
+}
+.news-info{
+    margin-bottom: 32px;
 }
