--- a/style.css
+++ b/style.css
@@ -24,6 +24,9 @@ body{
 .bg3{
     margin-bottom: 80px;
 }
+.bg-white{
+    background-color: white;
+}
 .btn-primary{
     padding: 17px 34px;
     background-color: #006A50;
@@ -42,6 +45,7 @@ body{
 }
 .section-description{
     margin: 24px 0 32px;
+    color: #0e0e0ec5;
 }
 
 /* nav styles */
@@ -236,6 +240,7 @@ td{
     gap: 32px;
     border-radius: 24px;
     margin-bottom: 24px;
+    box-shadow: 0 10px 15px 2px rgba(0, 0, 0, 0.3);
 }
 .news-img{
     border-radius: 24px;
@@ -253,3 +258,43 @@ td{
 .news-info{
     margin-bottom: 32px;
 }
+
+/* donate styles */
+.donate{
+    text-align: center;
+}
+.amount{
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    padding: 0 auto;
+}
+.taka{
+    padding: 40px;
+    color: #0E0E0E;
+    font-size: 40px;
+    font-weight: bold;
+    border-radius: 16px;
+    cursor: pointer;
+}
+.taka:hover{
+    background-color: #446144;
+    color: white;
+}
+.donate-info{
+    padding: 0 80px 0;
+}
+#money{
+    border: none;
+    text-align: center;
+    width: 81%;
+    margin: 32px;
+    height: 64px;
+    font-size: 20px;
+}
+::placeholder{
+    font-size: 20px;
+    color: #0e0e0e46;
+}
+
+/*  */
