--- a/style.css
+++ b/style.css
@@ -297,4 +297,31 @@ td{
     color: #0e0e0e46;
 }
 
-/*  */
+/* subscribe styles */
+.sub{
+    padding: 80px 265px;
+}
+.subscribe{
+    text-align: center;
+}
+#email{
+    width: 100%;
+    height: 48px;
+    border: none;
+    border-radius: 6px 0 0 6px;
+    margin-bottom: 25px;
+    padding-left: 40px;
+    font-size: 20px;
+}
+.submission{
+    display: flex;
+    justify-content: last baseline;
+    align-items: first baseline;
+}
+.sub-btn{
+    border-radius: 0 6px 6px 0;
+    padding: 19px 34px 15px;
+}
+.promise{
+    text-align: center;
+}
