--- a/style.css
+++ b/style.css
@@ -37,6 +37,8 @@ body{
 }
 .btn-primary:hover{
     background-color: #39a439;
+    box-shadow: 0 10px 15px 2px rgba(0, 0, 0, 0.3);
+
 }
 .section-title{
     font-size: 40px;
@@ -159,12 +161,15 @@ nav{
 }
 .vbtn1:hover{
     background-color: #1753bb;
+    box-shadow: 0 10px 15px 2px rgba(56, 60, 150, 0.3);
 }
 .vbtn2:hover{
     background-color: #138150;
+    box-shadow: 0 10px 15px 2px rgba(13, 44, 14, 0.3);
 }
 .vbtn3:hover{
     background-color: #cf9b22;
+    box-shadow: 0 10px 15px 2px rgba(125, 126, 83, 0.3);
 }
 
 /* yunus styles */
@@ -227,6 +232,7 @@ td{
 }
 .dropdown:hover{
     background-color: #39a439;
+    box-shadow: 0 10px 15px 2px rgba(0, 0, 0, 0.3);
     color: white;
 }
 
@@ -300,6 +306,7 @@ td{
 /* subscribe styles */
 .sub{
     padding: 80px 265px;
+    border-radius: 24px;
 }
 .subscribe{
     text-align: center;
@@ -324,4 +331,20 @@ td{
 }
 .promise{
     text-align: center;
+}
+
+/* footer styles */
+footer{
+    background-color: white;
+    padding: 120px 239px 106px;
+    text-align: center;
+}
+.ftitle{
+    font-size: 32px;
+    font-weight: 700;
+    margin-bottom: 32px;
+}
+.fimg{
+    margin: 32px 23px;
+    width: 24px;
 }
